<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/lavender"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/swipeRefreshLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backEdit"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_weight="0"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/chinh_sua_thong_gtin"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <!-- Nội dung cần làm mới nằm ở đây -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_avatar"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_300sdp"
                android:scaleType="fitXY"
                android:src="@drawable/img_5"
                app:layout_constraintBottom_toTopOf="@id/fullName"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fullName"
                style="@style/item_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:drawableEnd="@drawable/baseline_drive_file_rename_outline_24"
                android:gravity="center_vertical"
                android:hint="@string/ho_va_ten_edit"
                android:maxLength="50"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_avatar" />

            <EditText
                android:id="@+id/birthday"
                style="@style/item_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:gravity="center_vertical"
                android:hint="@string/ngay_tháng_nam_edit"
                android:inputType="date"
                android:maxLength="50"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullName"

                tools:ignore="HardcodedText" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                style="@style/item_search"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:gravity="center_vertical"
                app:ccp_countryPreference="VN"
                app:ccp_defaultLanguage="VIETNAMESE"
                app:ccp_defaultNameCode="VN"
                app:ccp_showNameCode="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.262"
                app:layout_constraintHorizontal_weight="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/phoneNumber"
                app:layout_constraintTop_toBottomOf="@id/birthday"
                app:layout_constraintVertical_bias="0.032" />

            <EditText
                android:id="@+id/phoneNumber"
                style="@style/item_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/sdt"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/countryCodePicker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday"
                app:layout_constraintVertical_bias="0.032" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button_background"
        android:text="@string/cap_nhat"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>